Bug 1976751 - Newtab fixing add shortcut button contrast issue  a=diannaS DONTBUILD
Original Revision: https://phabricator.services.mozilla.com/D256868

Differential Revision: https://phabricator.services.mozilla.com/D260048

--- a/browser/extensions/newtab/content-src/components/TopSites/_TopSites.scss
+++ b/browser/extensions/newtab/content-src/components/TopSites/_TopSites.scss
@@ -194,6 +194,10 @@ $calculated-max-width-twice-widest: $break-point-widest + 2 * $card-width;
     @include wallpaper-contrast-fix;
   }
 
+  .tile {
+    color-scheme: initial;
+  }
+
   // Necessary for when navigating by a keyboard, having the context
   // menu open should display the "…" button. This style is a clone
   // of the `:active` state for `.context-menu-button`
